--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description"
-            content="Exploring different technics and methods of making beautiful responsive websites with html and css">
+            content="Trending and latest products around the world ">
         <meta name="keywords"
-            content="responsive design,web design,web,development,front-end development,simpocodes">
+            content="products,latest products,tech,fashion,trendy,trending products,latest products,new products,best clothes 2023,best technology devices 2023">
         <meta name="creator" content="simpocodes">
         <meta name="author" content="simpocodes">
         <title>PickWiseLinks</title>
@@ -19,63 +19,318 @@
 
     <body class="bg-default">
         <div class="container-fluid">
+            <header>
+                <div class="logo">
+                    <a href="">PickWiseLinks</a>
+                </div>
 
-            <div class="container">
-                <header>
-
-                    <div class="logo">
-                        <a href="">PickWiseLinks</a>
+                <nav>
+                    <div class="close">
+                        <span>&#9747</span>
                     </div>
+                    <ul>
+                        <li><a href="#" class="active-nav-link">home</a>
+                        </li>
+                        <li><a href="#">Popular</a></li>
+                        <li><a href="#">Latest</a></li>
+                        <li><a href="#">About Us</a></li>
+                    </ul>
 
-                    <nav>
-                        <div class="close">
-                            <span>&#9747</span>
+                    <div class="account">
+                        <div class="profile-container">
+                            <div class="profile">
+                                <img src="imgs/img (5).jpg" alt="">
+                            </div>
                         </div>
-                        <ul>
-                            <li><a href="#" class="active-nav-link">home</a>
-                            </li>
-                            <li><a href="#">portifolio</a></li>
-                            <li><a href="#">projects</a></li>
-                            <li><a href="#">reference</a></li>
-                        </ul>
+                        <button class="">signup</button>
+                    </div>
+                </nav>
 
-                        <div class="account">
-                            <div class="profile-container">
-                                <div class="profile">
-                                    <img src="imgs/img (5).jpg" alt="">
+                <div class="menu "><a href="#">&#9776</a></div>
+            </header>
+
+            <div class="banner">
+                <div class="container">
+                    <div class="banner-content">
+                        <h1>Shop Smart
+                        </h1>
+                        <p>Save time and money by using our product links.
+                            Easily find the products you love with our one-stop
+                            platform
+                        </p>
+                        <blockquote>
+                            <em>
+                                <strong>
+                                    Unearth hidden gems and must-have items from
+                                    across the web
+                                </strong>
+                            </em>
+                        </blockquote>
+                        <button class="btn bg-primary">get started</button>
+                    </div>
+                    <div class="side-banner"></div>
+                </div>
+            </div>
+
+            <div class="container ">
+                <div class="nav-product-category">
+                    <ul>
+                        <li><a href="#" class="active-category">all</a></li>
+                        <li><a href="#">tech</a></li>
+                        <li><a href="#">fashion</a></li>
+                        <li><a href="#">household</a></li>
+                        <li><a href="#">education</a></li>
+                        <li><a href="#">office</a></li>
+                    </ul>
+                    <div class="product-category-search">
+                        <form action="/index.html" method="">
+                            <input type="text" name="msg"
+                                placeholder="Search product brand"
+                                class="search-brant-inpt">
+                            <input type="submit" name="submit"
+                                class="btn submit_btn" value="search">
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container products-container mt-1">
+
+                <div class="products-category">
+                    <div class="product-price-range">
+                        <a
+                            href="#"><span>$1</span><span>-</span><span>$10</span></a>
+                        <a
+                            href="#"><span>$10</span><span>-</span><span>$100</span></a>
+                        <a
+                            href="#"><span>$100</span><span>-</span><span>$250</span></a>
+                        <a
+                            href="#"><span>$250</span><span>-</span><span>$500</span></a>
+                        <a
+                            href="#"><span>$500</span><span>-</span><span>$1000</span></a>
+                        <a href="#"><span>$1000 <sup>+</sup></span></a>
+                    </div>
+                    <div class="products">
+                        <div class="product">
+                            <div class="zoom-product">
+                                <span class="">+</span>
+                            </div>
+
+                            <div class="product-img">
+                                <img src="imgs/products/branding-3.jpg" alt="">
+                            </div>
+
+                            <div class="about-product">
+                                <div class="product-source">
+                                    <span>fashinova</span>
+                                </div>
+                                <div class="product-price">
+                                    <span>$100</span>
                                 </div>
                             </div>
-                            <button class="btn  bg-secondary">signup</button>
+
+                            <div class="product-link">
+                                <a href="#" class="btn">buy</a>
+                            </div>
+
                         </div>
-                    </nav>
 
-                    <div class="menu "><a href="#">&#9776</a></div>
+                        <div class="product">
+                            <div class="zoom-product">
+                                <span class="">+</span>
+                            </div>
 
+                            <div class="product-img">
+                                <img src="imgs/products/branding-1.jpg" alt="">
+                            </div>
 
+                            <div class="about-product">
+                                <div class="product-source">
+                                    <span>amazon</span>
+                                </div>
+                                <div class="product-price">
+                                    <span>$500</span>
+                                </div>
+                            </div>
 
-                </header>
-            </div>
-            <div class="banner">
+                            <div class="product-link">
+                                <a href="#" class="btn">buy</a>
+                            </div>
 
-                <div class="banner-content">
-                    <h1>Shop Smart
-                    </h1>
-                    <p>Save time and money by using our product links.
-                        Easily find the products you love with our one-stop
-                        platform
-                    </p>
-                    <blockquote>
-                        <em>
-                            <strong>
-                                Unearth hidden gems and must-have items from
-                                across the web
-                            </strong>
-                        </em>
-                    </blockquote>
-                    <button class="btn bg-primary">get started</button>
+                        </div>
+
+                        <div class="product">
+                            <div class="zoom-product">
+                                <span class="">+</span>
+                            </div>
+
+                            <div class="product-img">
+                                <img src="imgs/products/branding-2.jpg" alt="">
+                            </div>
+
+                            <div class="about-product">
+                                <div class="product-source">
+                                    <span>fashinova</span>
+                                </div>
+                                <div class="product-price">
+                                    <span>$350</span>
+                                </div>
+                            </div>
+
+                            <div class="product-link">
+                                <a href="#" class="btn">buy</a>
+                            </div>
+
+                        </div>
+
+                        <div class="product">
+                            <div class="zoom-product">
+                                <span class="">+</span>
+                            </div>
+
+                            <div class="product-img">
+                                <img src="imgs/products/product-1.jpg" alt="">
+                            </div>
+
+                            <div class="about-product">
+                                <div class="product-source">
+                                    <span>ebay</span>
+                                </div>
+                                <div class="product-price">
+                                    <span>$210</span>
+                                </div>
+                            </div>
+
+                            <div class="product-link">
+                                <a href="#" class="btn">buy</a>
+                            </div>
+
+                        </div>
+
+                        <div class="product">
+                            <div class="zoom-product">
+                                <span class="">+</span>
+                            </div>
+
+                            <div class="product-img">
+                                <img src="imgs/products/product-2.jpg" alt="">
+                            </div>
+
+                            <div class="about-product">
+                                <div class="product-source">
+                                    <span>amazon</span>
+                                </div>
+                                <div class="product-price">
+                                    <span>$700</span>
+                                </div>
+                            </div>
+
+                            <div class="product-link">
+                                <a href="#" class="btn">buy</a>
+                            </div>
+
+                        </div>
+
+                        <div class="product">
+                            <div class="zoom-product">
+                                <span class="">+</span>
+                            </div>
+
+                            <div class="product-img">
+                                <img src="imgs/products/product-3.jpg" alt="">
+                            </div>
+
+                            <div class="about-product">
+                                <div class="product-source">
+                                    <span>newChic</span>
+                                </div>
+                                <div class="product-price">
+                                    <span>$150</span>
+                                </div>
+                            </div>
+
+                            <div class="product-link">
+                                <a href="#" class="btn">buy</a>
+                            </div>
+
+                        </div>
+
+                        <div class="product">
+                            <div class="zoom-product">
+                                <span class="">+</span>
+                            </div>
+
+                            <div class="product-img">
+                                <img src="imgs/products/branding-3.jpg" alt="">
+                            </div>
+
+                            <div class="about-product">
+                                <div class="product-source">
+                                    <span>fashinova</span>
+                                </div>
+                                <div class="product-price">
+                                    <span>$900</span>
+                                </div>
+                            </div>
+
+                            <div class="product-link">
+                                <a href="#" class="btn">buy</a>
+                            </div>
+
+                        </div>
+                        <div class="product">
+                            <div class="zoom-product">
+                                <span class="">+</span>
+                            </div>
+
+                            <div class="product-img">
+                                <img src="imgs/products/product-3.jpg" alt="">
+                            </div>
+
+                            <div class="about-product">
+                                <div class="product-source">
+                                    <span>newchic</span>
+                                </div>
+                                <div class="product-price">
+                                    <span>$900</span>
+                                </div>
+                            </div>
+
+                            <div class="product-link">
+                                <a href="#" class="btn">buy</a>
+                            </div>
+
+                        </div>
+                        <div class="product">
+                            <div class="zoom-product">
+                                <span class="">+</span>
+                            </div>
+
+                            <div class="product-img">
+                                <img src="imgs/products/branding-2.jpg" alt="">
+                            </div>
+
+                            <div class="about-product">
+                                <div class="product-source">
+                                    <span>fashinova</span>
+                                </div>
+                                <div class="product-price">
+                                    <span>$900</span>
+                                </div>
+                            </div>
+
+                            <div class="product-link">
+                                <a href="#" class="btn">buy</a>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
-                <div class="side-banner"></div>
+
+                <div class="more-products"></div>
             </div>
+
+            <footer></footer>
         </div>
     </body>
 
