--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
         <script src="js/app.js" defer></script>
     </head>
 
-    <body class="bg-default">
+    <body class="bg-default ">
+        <div class="page-loader">
+            <div class="loader">
+                <span></span>
+            </div>
+        </div>
         <div class="container-fluid">
+
             <header>
                 <div class="logo">
                     <a href="">PickWiseLinks</a>
@@ -68,7 +74,7 @@
                         </blockquote>
                         <button class="btn bg-primary">get started</button>
                     </div>
-                    <div class="side-banner"></div>
+                    <div class="side-banner img"></div>
                 </div>
             </div>
 
