--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             href="#"><span>$500</span><span>-</span><span>$1000</span></a>
                         <a href="#"><span>$1000 <sup>+</sup></span></a>
                     </div>
-                    <!-- <div class="products ">
+                    <div class="products ">
                         <div class="product">
                             <div class="zoom-product">
                                 <span class="">+</span>
@@ -593,7 +593,7 @@
 
                         </div>
 
-                    </div> -->
+                    </div>
                 </div>
 
                 <div class="more-products"></div>
