--- a/index.html
+++ b/index.html
@@ -18,9 +18,21 @@
     </head>
 
     <body class="bg-default">
+        <div class="check_online_status">
+            <span id="internet_status"></span>
+        </div>
         <div class="page-loader">
             <div class="loader">
-                <span></span>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
             </div>
         </div>
 
@@ -86,7 +98,7 @@
 
             <div class="container " id="nav-product-category">
                 <div class="nav-product-category">
-                    <ul>
+                    <ul class="nav-product-categorys">
                         <li><a href="#" class="active-category">all</a></li>
                         <li><a href="#">tech</a></li>
                         <li><a href="#">fashion</a></li>
@@ -151,7 +163,7 @@
                                         <span>$35.00</span>
                                     </div>
                                     <div class="product-link">
-                                        <a href="#" class="btn">buy</a>
+                                        <a href="#" class="btn buy">buy</a>
                                     </div>
                                 </div>
                             </div>
@@ -187,7 +199,7 @@
                                         <span>$190.65</span>
                                     </div>
                                     <div class="product-link">
-                                        <a href="#" class="btn">buy</a>
+                                        <a href="#" class="btn buy">buy</a>
                                     </div>
                                 </div>
                             </div>
@@ -223,7 +235,7 @@
                                         <span>$220.00</span>
                                     </div>
                                     <div class="product-link">
-                                        <a href="#" class="btn">buy</a>
+                                        <a href="#" class="btn buy">buy</a>
                                     </div>
                                 </div>
                             </div>
@@ -259,7 +271,7 @@
                                         <span>$70.42</span>
                                     </div>
                                     <div class="product-link">
-                                        <a href="#" class="btn">buy</a>
+                                        <a href="#" class="btn buy">buy</a>
                                     </div>
                                 </div>
                             </div>
@@ -295,7 +307,7 @@
                                         <span>$900.12</span>
                                     </div>
                                     <div class="product-link">
-                                        <a href="#" class="btn">buy</a>
+                                        <a href="#" class="btn buy">buy</a>
                                     </div>
                                 </div>
                             </div>
@@ -331,7 +343,7 @@
                                         <span>$30.12</span>
                                     </div>
                                     <div class="product-link">
-                                        <a href="#" class="btn">buy</a>
+                                        <a href="#" class="btn buy">buy</a>
                                     </div>
                                 </div>
                             </div>
@@ -367,7 +379,7 @@
                                         <span>$70.42</span>
                                     </div>
                                     <div class="product-link">
-                                        <a href="#" class="btn">buy</a>
+                                        <a href="#" class="btn buy">buy</a>
                                     </div>
                                 </div>
                             </div>
@@ -403,7 +415,7 @@
                                         <span>$60.98</span>
                                     </div>
                                     <div class="product-link">
-                                        <a href="#" class="btn">buy</a>
+                                        <a href="#" class="btn buy">buy</a>
                                     </div>
                                 </div>
                             </div>
@@ -439,7 +451,7 @@
                                         <span>$1500.00</span>
                                     </div>
                                     <div class="product-link">
-                                        <a href="#" class="btn">buy</a>
+                                        <a href="#" class="btn buy">buy</a>
                                     </div>
                                 </div>
                             </div>
@@ -475,7 +487,7 @@
                                         <span>$200.50</span>
                                     </div>
                                     <div class="product-link">
-                                        <a href="#" class="btn">buy</a>
+                                        <a href="#" class="btn buy">buy</a>
                                     </div>
                                 </div>
                             </div>
@@ -483,7 +495,6 @@
 
 
                         </div>
-
                         <div class="product">
                             <div class="zoom-product">
                                 <span class="">+</span>
@@ -512,7 +523,7 @@
                                         <span>$35.00</span>
                                     </div>
                                     <div class="product-link">
-                                        <a href="#" class="btn">buy</a>
+                                        <a href="#" class="btn buy">buy</a>
                                     </div>
                                 </div>
                             </div>
@@ -548,7 +559,7 @@
                                         <span>$190.65</span>
                                     </div>
                                     <div class="product-link">
-                                        <a href="#" class="btn">buy</a>
+                                        <a href="#" class="btn buy">buy</a>
                                     </div>
                                 </div>
                             </div>
@@ -584,7 +595,115 @@
                                         <span>$220.00</span>
                                     </div>
                                     <div class="product-link">
-                                        <a href="#" class="btn">buy</a>
+                                        <a href="#" class="btn buy">buy</a>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+                        </div>
+                        <div class="product">
+                            <div class="zoom-product">
+                                <span class="">+</span>
+                            </div>
+
+                            <div class="product-img">
+                                <img src="imgs/products/product-3.jpg" alt="">
+                            </div>
+
+                            <div class="about-product">
+                                <div class="product-name">
+                                    <h1>Home bulb</h1>
+                                </div>
+                                <div class="product-r-s-p">
+                                    <div class="product-rating">
+                                        <span>&#9733;</span>
+                                        <span>&#9733;</span>
+                                        <span>&#9733;</span>
+                                        <span>&#9733;</span>
+                                        <span>&#9733;</span>
+                                    </div>
+                                    <div class="product-source">
+                                        <span>alibaba</span>
+                                    </div>
+                                    <div class="product-price">
+                                        <span>$70.42</span>
+                                    </div>
+                                    <div class="product-link">
+                                        <a href="#" class="btn buy">buy</a>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+                        </div>
+                        <div class="product">
+                            <div class="zoom-product">
+                                <span class="">+</span>
+                            </div>
+
+                            <div class="product-img">
+                                <img src="imgs/products/product-1.jpg" alt="">
+                            </div>
+
+                            <div class="about-product">
+                                <div class="product-name">
+                                    <h1>HD camera</h1>
+                                </div>
+                                <div class="product-r-s-p">
+                                    <div class="product-rating">
+                                        <span>&#9733;</span>
+                                        <span>&#9733;</span>
+                                        <span>&#9733;</span>
+                                        <span>&#9733;</span>
+                                        <span>&#9733;</span>
+                                    </div>
+                                    <div class="product-source">
+                                        <span>amazon</span>
+                                    </div>
+                                    <div class="product-price">
+                                        <span>$900.12</span>
+                                    </div>
+                                    <div class="product-link">
+                                        <a href="#" class="btn buy">buy</a>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+                        </div>
+                        <div class="product">
+                            <div class="zoom-product">
+                                <span class="">+</span>
+                            </div>
+
+                            <div class="product-img">
+                                <img src="imgs/products/product-9.jpg" alt="">
+                            </div>
+
+                            <div class="about-product">
+                                <div class="product-name">
+                                    <h1>Office Chair</h1>
+                                </div>
+                                <div class="product-r-s-p">
+                                    <div class="product-rating">
+                                        <span>&#9733;</span>
+                                        <span>&#9733;</span>
+                                        <span>&#9733;</span>
+                                        <span>&#9733;</span>
+                                        <span>&#9733;</span>
+                                    </div>
+                                    <div class="product-source">
+                                        <span>amazon</span>
+                                    </div>
+                                    <div class="product-price">
+                                        <span>$220.00</span>
+                                    </div>
+                                    <div class="product-link">
+                                        <a href="#" class="btn buy">buy</a>
                                     </div>
                                 </div>
                             </div>
@@ -596,7 +715,19 @@
                     </div>
                 </div>
 
-                <div class="more-products"></div>
+                <div class="more-products">
+                    <span class="active">1</span>
+                    <span>2</span>
+                    <span>3</span>
+                    <span>4</span>
+                    <span>5</span>
+                    <span>6</span>
+                    <span>7</span>
+                    <span>8</span>
+                    <span>9</span>
+                    <span>next</span>
+
+                </div>
             </div>
 
             <footer></footer>
