--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
                     <span>7</span>
                     <span>8</span>
                     <span>9</span>
-                    <span>next</span>
+                    <span class="next_products">next</span>
 
                 </div>
             </div>
