--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <img src="imgs/img (5).jpg" alt="">
                             </div>
                         </div>
-                        <button class="">signup</button>
+                        <a class="btn" href="account/signup.html">signup</a>
                     </div>
                 </nav>
 
