--- a/account/signup.html
+++ b/account/signup.html
@@ -43,7 +43,7 @@
                         <input type="text" name="passwprd" required>
                     </label>
                     <div>
-                        <input type="submit" class="btn" value="signup">
+                        <input type="submit" class="btn sbt-btn" value="signup">
 
                     </div>
                     <div class="more_options">
